fix: incorrect text wrapping

--- a/src/pages/landing-page/landing-page.scss
+++ b/src/pages/landing-page/landing-page.scss
@@ -39,6 +39,7 @@
     position: relative;
     left: rem(5px);
     align-self: flex-end;
+    max-width: rem(250px);
     margin: rem(0 0 20px);
     white-space: pre-line;
     text-align: right;
